[package]
name = "grab_github"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
glob-match = "0.2.1"
itertools = "0.13.0"
reqwest = "0.12.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
const_format = "0.2.32"
tokio = { version = "1.38.0", features = ["sync", "macros", "fs"] }
base64 = "0.22.1"

[dev-dependencies]
sha1 = "0.10.6"
